Melhoria no pinguim admin e resolucao de bugs
