# src/main/kotlin/br/com/pinguimice/admin/controller/SaborController.kt
@@ -3,11 +3,13 @@ package br.com.pinguimice.admin.controller
 import br.com.pinguimice.admin.model.SaborRequest
 import br.com.pinguimice.admin.model.SaborResponse
 import br.com.pinguimice.admin.service.SaborService
+import br.com.storehouse.data.model.UsuarioAutenticado
 import org.springframework.http.HttpStatus
+import org.springframework.security.core.annotation.AuthenticationPrincipal
 import org.springframework.web.bind.annotation.*
 
 @RestController
-@RequestMapping("/api/pinguimice-admin/sabores")
+@RequestMapping("/api/pinguim-admin/sabores")
 class SaborController(
     private val saborService: SaborService
 ) {
@@ -22,8 +24,9 @@ class SaborController(
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
     fun criarSabor(
-        @RequestBody request: SaborRequest
+        @RequestBody request: SaborRequest,
+        @AuthenticationPrincipal usuario: UsuarioAutenticado
     ): SaborResponse {
-        return saborService.criarSabor(request)
+        return saborService.criarSabor(request, usuario.filialId)
     }
 }
